<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.relativelayoutmaterial.MainActivity">


    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/malaga_slider_1" />
    <!--    android:layout_alignParentTop="true" alinear con el padre por arriba
            android:scaleType="fitXY" para escalar la imagen de diferentes formas   -->

    <ImageView
        android:id="@+id/imgFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="182dp"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TextView
        android:id="@+id/txvMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvMonument"
        android:layout_below="@+id/imgCity"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/txvDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvDateVitsit"
        android:layout_below="@id/txvMonument"
        android:layout_alignStart="@id/txvMonument"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/edtDateVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txvDateVisit"
        android:layout_toEndOf="@id/txvDateVisit"
        android:ems="10"
        android:inputType="date"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/txvTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvTypeVisit"
        android:layout_below="@id/txvDateVisit"
        android:layout_alignStart="@id/txvDateVisit"
        android:layout_marginTop="25dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <EditText
        android:id="@+id/edtTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txvTypeVisit"
        android:layout_alignStart="@id/edtDateVisit"
        android:layout_toEndOf="@id/txvTypeVisit"
        android:layout_alignEnd="@id/edtDateVisit"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnBuy"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/imgFavourites"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btnReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReserved"
        android:layout_toLeftOf="@id/btnBuy"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@id/btnBuy" />


</RelativeLayout>
