<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/contentImgCity"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/ImgFavourites"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/malaga_slider_1" />

    <ImageView
        android:id="@+id/ImgFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:srcCompat="@android:drawable/btn_star" />
    <!--    android:layout_alignParentTop="true" alinear con el padre por arriba
            android:scaleType="fitXY" para escalar la imagen de diferentes formas   -->

    <TextView
        android:id="@+id/txvMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgCity"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/txvMonument"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCity" />

    <TextView
        android:id="@+id/txvDateVisit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txvMonument"
        android:layout_below="@id/txvMonument"
        android:layout_marginTop="16dp"
        android:text="@string/txvDateVitsit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txvMonument" />

    <EditText
        android:id="@+id/edtDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txvDateVisit"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@id/txvDateVisit"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvDateVisit"
        app:layout_constraintStart_toEndOf="@+id/txvDateVisit" />

    <TextView
        android:id="@+id/txvTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/txvDateVisit"
        android:layout_below="@id/txvDateVisit"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/txvTypeVisit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/barrier"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txvDateVisit" />

    <EditText
        android:id="@+id/edtTypeVisit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txvTypeVisit"
        android:layout_toEndOf="@id/txvTypeVisit"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/txvTypeVisit"
        app:layout_constraintStart_toEndOf="@+id/barrier" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/imgFavourites"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnBuy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImgFavourites" />

    <Button
        android:id="@+id/btnReserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnBuy"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toLeftOf="@id/btnBuy"
        android:text="@string/btnReserved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBuy" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="edtDateVisit,edtTypeVisit" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

</android.support.constraint.ConstraintLayout>
